tests/externblob/generic_mismatch.sy
from unsafe use unsafe_force

Foo :: externblob(*T) {
  bar: *T
}

Hack :: blob(*T) {
  bar: *T
}

start :: fn do
  a: Foo(str) : unsafe_force' Hack { bar: "hello" }
  b: Foo(int) : unsafe_force' Hack { bar: 7 }

  x := a
  x = b
end

// error: A 'int' cannot be a 'str'
